src/components/Toaster/Toast/Toast.scss
@use '../../variables';
@use '../../../../styles/mixins';

$block: '.#{variables.$ns}toast';

#{$block} {
    $closeButtonSize: 24px;
    $closeButtonEdgesSpacing: 16px;
    $closeButtonTitleSpacing: 8px;
    $containerClass: #{&}__container;
    $iconClass: #{&}__icon;

    // These custom properties used in ToastAnimation
    --yc-toaster-margin: 10px;
    --yc-toaster-padding: 16px;

    display: flex;
    box-sizing: border-box;
    position: relative;
    width: inherit;
    margin-bottom: var(--yc-toaster-margin);
    padding: var(--yc-toaster-padding);
    font-size: var(--g-text-body-2-font-size);
    border-radius: 8px;
    box-shadow: 0px 0px 15px var(--g-color-sfx-shadow);
    background-color: var(--g-color-base-background);
    overflow: hidden;
    z-index: 0;

    &_mobile {
        width: 100%;
    }

    &_default {
        background-color: var(--g-color-base-float);
    }

    &_info {
        & #{$containerClass}:before {
            background-color: var(--g-color-base-info-light);
        }

        & #{$iconClass} {
            color: var(--g-color-text-info-heavy);
        }
    }

    &_success {
        & #{$containerClass}:before {
            background-color: var(--g-color-base-positive-light);
        }

        & #{$iconClass} {
            color: var(--g-color-text-positive-heavy);
        }
    }

    &_warning {
        & #{$containerClass}:before {
            background-color: var(--g-color-base-warning-light);
        }

        & #{$iconClass} {
            color: var(--g-color-text-warning-heavy);
        }
    }

    &_error {
        & #{$containerClass}:before {
            background-color: var(--g-color-base-danger-light);
        }

        & #{$iconClass} {
            color: var(--g-color-text-danger-heavy);
        }
    }

    &_utility {
        & #{$containerClass}:before {
            background-color: var(--g-color-base-utility-light);
        }

        & #{$iconClass} {
            color: var(--g-color-text-utility-heavy);
        }
    }

    #{$containerClass} {
        flex: 1 1 auto;
        display: grid;
        row-gap: 8px;
        width: 100%;
        height: 100%;
        min-height: var(--g-text-body-2-line-height);

        &:before {
            content: '';
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            pointer-events: none;
            z-index: -1;
        }
    }

    &__icon-container {
        flex: 0 0 auto;
        padding-right: 8px;
        padding-top: 2px;
    }

    &__title {
        @include mixins.text-subheader-3;
        margin: 0;
        padding-right: $closeButtonTitleSpacing + $closeButtonSize;
    }

    &__content_without-title {
        padding-right: $closeButtonTitleSpacing + $closeButtonSize;
    }

    &__action {
        margin-right: 8px;
    }

    & &__btn-close {
        position: absolute;
        top: $closeButtonEdgesSpacing;
        right: $closeButtonEdgesSpacing;
    }
}

